tests/bad/methods_invalid_struct.ae
/// fail: Type for method does not exist

def Foo::bar() {}